Changes for 3.2.7rc1

New features:

Bug fixes:
..F....... [ZBX-12019] fixed incorrectly displayed calendar date in maintenance edit form (miks)
..F....... [ZBX-11304] fixed trigger wizard expressions sorting as well as wizard crash due incorrect expression removal (miks)
..F....... [ZBX-11585] fixed nested host group filter in top 100 triggers, item configuration list and dashboard widgets (miks)
A......... [ZBX-12023,ZBX-12133,ZBX-12225] fixed permissions and performance issues with event.get and problem.get methods (Sasha)
.......PS. [ZBX-12046] fixed handling of database failure during ID selection (vso)
..F....... [ZBX-11683] fixed problem with lost IDs of unlinkable templates (miks)
.......PS. [ZBX-12142] fixed Oracle batch insert return value (wiper)
..F....... [ZBX-11618] fixed displaying hints with no content inside (miks)
..F....... [ZBX-10546] fixed undefined index error in host import form while importing templates (gcalenko, Ivo)
..F....... [ZBX-11285] fixed cookie vulnerability for tabbed forms (gcalenko)
..F....... [ZBX-11486] fixed duplicated error messages in screens section (miks)
..F....... [ZBX-10807] fixed wrongly displayed field in item prototype form (miks)
..F....... [ZBX-11549] fixed 'numeric value' error in dashboard for php 7 (gcalenko, Sasha)
..F....... [ZBX-11559] fixed jquery binded function call on form submit (miks)
..F....... [ZBX-11677] fixed history page to display values in chronological order (miks)
..F....... [ZBX-11405] fixed conditions to display treeview button in triggers section (miks)
........S. [ZBX-12012] fixed resolving of Critical and Verbose event log levels by {ITEM.LOG.SEVERITY} macro (Sasha)
A......... [ZBX-12093] fixed removing of applications that are created from application prototypes (Sasha)

--------------------------------------------------------------------------------
Changes for 3.2.6

New features: