@@ -3,6 +3,7 @@ Changes for 3.2.7rc1
 New features:
 
 Bug fixes:
+..F....... [ZBX-6533] improved LDAP authentication module status check for authentication form (gcalenko)
 ..F....... [ZBX-12019] fixed incorrectly displayed calendar date in maintenance edit form (miks)
 ..F....... [ZBX-11304] fixed trigger wizard expressions sorting as well as wizard crash due incorrect expression removal (miks)
 ..F....... [ZBX-11585] fixed nested host group filter in top 100 triggers, item configuration list and dashboard widgets (miks)
